--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     dependencies {
+        def nav_version = "2.5.0"
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.40.5")
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
